Correct MIR comments on SXRD

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -22,7 +22,7 @@ Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and parti
 To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organisation (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
 Air quality is the main environmental concern of Ile-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
 
-\section{The oxidation of Ammonia}
+\section{The oxidation of ammonia}
 
 \subsection{The Haber-Bosch and Ostwald processes}
 
@@ -140,23 +140,23 @@ A \ce{Pt_3O_4} catalyst used for the oxidation of ammonia was proven to be unsta
 
 Overall, the presence of rhodium in the catalysts limits the loss of platinum during operation, thus reducing the cost of industrial scale ammonia oxidation \parencite{Hatscher2008}.
 
-\subsection{Reaction mechanism}
+\subsection{Reaction mechanism}\label{sec:Mechanism}
 
 First studies performed at low working pressure but at different temperatures have supported a Langmuir-Hinshelwood mechanism during which both reactants are decomposed and adsorbed on top of the catalyst surface \parencite{Nutt1969, Pignet1974, Ostermaier1974, Pignet1975, Gland1978a}, the final pathway towards the production of nitrogen or nitrous oxide depending on the ratio between the \ce{O_2} and \ce{NH_3} partial pressures.
 
-The importance of adsorbed atomic oxygen and \ce{OH} in the dissociation of \ce{NH_3} on both Pt (111) \parencite{Mieher1995} and Pt (100) surface was put into evidence \parencite{Bradley1995, Bradley1997, vandenBroek1999, Kim2000}.
-High oxygen coverage on Pt (100) has shown to reduce the production of \ce{N_2}, mainly produced by the dissociation of \ce{NO}, favoured at lower temperatures over \ce{NO} desorption \parencite{Bradley1995}.
-Asscher et al. \parencite*{Asscher1984} have reported the existence of a mechanism involving oxygen in the gas phase reacting with adsorbed NH species on Pt (111) for the production of \ce{NO}.
-At UHV, a rotated hexagonal reconstruction on top of Pt (100) was found to impinge \ce{NH_3} dissociation at low temperature (\qty{-123}{\degreeCelsius}) \parencite{Bradley1997}, the ammonia oxidation stabilising the (1x1) phase \parencite{Rafti2007} by the formation of \ce{NH_x} intermediates between \qty{125}{\degreeCelsius} and \qty{350}{\degreeCelsius}.
+The importance of adsorbed atomic oxygen and \ce{OH} in the dissociation of \ce{NH_3} on both Pt(111) \parencite{Mieher1995} and Pt(100) surface was put into evidence \parencite{Bradley1995, Bradley1997, vandenBroek1999, Kim2000}.
+High oxygen coverage on Pt(100) has shown to reduce the production of \ce{N_2}, mainly produced by the dissociation of \ce{NO}, favoured at lower temperatures over \ce{NO} desorption \parencite{Bradley1995}.
+Asscher et al. \parencite*{Asscher1984} have reported the existence of a mechanism involving oxygen in the gas phase reacting with adsorbed NH species on Pt(111) for the production of \ce{NO}.
+At UHV, a rotated hexagonal reconstruction on top of Pt(100) was found to impinge \ce{NH_3} dissociation at low temperature (\qty{-123}{\degreeCelsius}) \parencite{Bradley1997}, the ammonia oxidation stabilising the (1x1) phase \parencite{Rafti2007} by the formation of \ce{NH_x} intermediates between \qty{125}{\degreeCelsius} and \qty{350}{\degreeCelsius}.
 
 % steps
 The importance of atomic steps in the catalytic activity was first revealed by Gland et al. \parencite*{Gland1978, Gland1980}.
 A more recent study of the oxidation of ammonia on several model catalysts (Pt(533), Pt(443), Pt(865), Pt(100), Pt foil) to investigate the structure selectivity by Yingfeng \parencite*{Yingfeng2008} linked the presence of steps and kinks with higher catalytic activity in the \qtyrange{1e-9}{1e-5}{\bar} range.
-Similar results have been revealed that the Pt (533) is 2 to 4 times more active than Pt (443) below \qty{1e-5}{\bar} \parencite{Scheibe2005}.
+Similar results have been revealed that the Pt(533) is 2 to 4 times more active than Pt(443) below \qty{1e-5}{\bar} \parencite{Scheibe2005}.
 Moreover, the production of \ce{N_2} was reported to be promoted by lower temperatures and a reduced \ce{O_2}/\ce{NH_3} ratio in the incoming gas flow, while higher temperatures and an elevated \ce{O_2}/\ce{NH_3} ratio tend to result in a higher selectivity towards the formation of \ce{NO} \parencite{Zeng2009}.
 No production of \ce{N_2O} was observed within the studied pressure range.
 The importance of steps at ambient pressure was revealed to be most important when aiming at producing \ce{N_2} at low temperature, but could not be correlated to an increase in \ce{NO} production at high temperature in a comparative study of the Pt(111) and Pt(211) surfaces \parencite{Ma2019}.
-It was shown that the adsorbed \ce{NH_3} hopping rate is close to its desorption rate on Pt (111) terrace sites, making it unlikely to reach the steps where it may react rather than desorb from the catalyst surface \parencite{Borodin2021}.
+It was shown that the adsorbed \ce{NH_3} hopping rate is close to its desorption rate on Pt(111) terrace sites, making it unlikely to reach the steps where it may react rather than desorb from the catalyst surface \parencite{Borodin2021}.
 
 % tap, kinetic studies
 Rebrov et al. \parencite*{Rebrov2002} detailed the reaction kinetics and mechanism with a 13 step, temperature dependent model, the parameters of which have been refined with data collected from the reactant and product partial pressures evolution in a micro-reactor.
@@ -194,10 +194,10 @@ Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures 
     \label{fig:ReactionMechanism}
 \end{figure}
 
-Novell-Leruth et al. \parencite*{NovellLeruth2005} confirmed the adsorption of \ce{NH_3} and \ce{NH_2} to occur respectively on top and bridge sites for both Pt (100) and Pt(111), but with a more favourable adsorption process on Pt (100).
+Novell-Leruth et al. \parencite*{NovellLeruth2005} confirmed the adsorption of \ce{NH_3} and \ce{NH_2} to occur respectively on top and bridge sites for both Pt(100) and Pt(111), but with a more favourable adsorption process on Pt(100).
 Similar adsorption energies have been reported for \ce{NH} and \ce{N} that both adsorb on hollow sites \
 Additional DFT studies of the reaction pathways and kinetics have confirmed a reaction mechanism following a step-by-step decomposition of ammonia on the catalyst surface, the stripping of adsorbed ammonia hydrogen atoms being facilitated by the presence of oxygen species \parencite{Offermans2006}.
-A comparative study between the Pt (100), Pt (111) and Pt (211) (\textit{i.e.} stepped) surfaces did not reveal a strong structure sensitivity during the \ce{NH_3} stripping process \parencite{Offermans2007}.
+A comparative study between the Pt(100), Pt(111) and Pt(211) (\textit{i.e.} stepped) surfaces did not reveal a strong structure sensitivity during the \ce{NH_3} stripping process \parencite{Offermans2007}.
 
 Imbihl et al. \parencite*{Imbihl2007} have further improved the understanding of the production of \ce{N_2O}, which happens not only by the recombination of two adsorbed \ce{NO} species but also \textit{via} the reaction between adsorbed \ce{NO} and \ce{NH_x} species.
 
@@ -326,7 +326,7 @@ This progress has often been preceded by the development of catalysis reactors c
 % single crystals
 The samples typically used when combining SXRD and XPS are single crystals, much larger than industrial samples (\qty{\approx 1}{\cm} whereas the gauze diameter is of about \qty{70}{\um}), tending towards model catalysts since they only exhibit a single type of structure on their surface \parencite{Goodman1994}.
 The reason behind the use of such sample is a large surface area exposed to the reacting gases and thus yielding an increased surface signal, most important to understand heterogeneous catalysis which is a surface process.
-Nevertheless, they can show some limitations, for example large Pt (111) single-crystals also exhibit a large amount of steps on their surface also contributing to the catalytic activity \parencite{CalleVallejo2017}.
+Nevertheless, they can show some limitations, for example large Pt(111) single-crystals also exhibit a large amount of steps on their surface also contributing to the catalytic activity \parencite{CalleVallejo2017}.
 
 % nanoparticles
 Only recently have supported platinum nanoparticles nanoparticles (\qty{\approx 1}{\nm} large) been used during the oxidation of ammonia, showing a remarkable selectivity towards \ce{NO} at high temperature and atmospheric pressure \parencite{Schaffer2013}.
@@ -377,7 +377,7 @@ An efficient and comprehensive workflow leading to reproducible results saved in
 
 The reactor used to study catalytic reaction at SixS is already compatible with highly oxidative environments \parencite{VanRijn2010, Resta2020a}, and will permit the study of the oxidation of ammonia \textit{via} surface x-ray diffraction and Bragg coherent diffraction imaging.
 Both the material and pressure gap will be partly bridged by operating at temperatures before and after the catalyst light-off, at almost industrial pressure.
-Pt nanoparticles will be used during \textit{operando} SXRD and BCDI, while Pt (111) and Pt (100) single crystals will be used with SXRD.
+Pt nanoparticles will be used during \textit{operando} SXRD and BCDI, while Pt(111) and Pt(100) single crystals will be used with SXRD.
 The structure-selectivity relationship will be explored at ambient pressure and high temperature by the means of a vast array of \ce{O_2}/\ce{NH_3} ratios, favouring either the production of \ce{N_2} or \ce{NO}.
 The presence of platinum oxides will be monitored in order to understand its importance in the reaction mechanism, as well as in potential catalyst reconstructions.
 Thus, the difference in activity between different crystalline facets will be studied with different samples that together offer a good compromise between industrial catalysts and samples compatible with the experimental setup of synchrotron beamlines.
