--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -2,38 +2,39 @@
 
 % introduce sxrd
 Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta2020a} single-crystals gave significant new insights on the relaxation dynamics when the system crosses the catalyst activation barrier.
-The experiment focused on measuring before and after the catalyst light off temperature, it was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward, but only for temperatures above the light off.
+The experiment focused on measuring the catalyst selectivity after the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
+It was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward, but only for temperatures above the light off.
 
-Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to positive relaxation of the topmost layer, expansion; while oxidative species (such as NO and oxygen) were linked to negative relaxation, contraction.
+Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to out-of-plane expansion of the topmost layer; while oxidative species (such as NO and oxygen) were linked to out-of-plane contraction.
 This change in relaxation has an impact on the band structure and therefore on the catalytic properties as proposed in the d-band model detailed in sec. \ref{sec:Catalysis}.
-It is therefore our intent to study if this modification in the relaxation is present only in the \ce{PtRh} alloy or if it has a more general value also on the constituent elements of the alloy such as Pt.
-Different relaxation state, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
+Therefore, our intention is to investigate whether this modification in relaxation is specific to the Pt-Rh alloy or if it holds a broader applicability to the constituent elements of the alloy, such as Pt
+Different relaxation states, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
 
-Moreover, the average shape of multi-faceted nanoparticles was recently probed at the SixS beamline under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani et al. \parencite*{Seriani2008}.
-The evolution of two single nanoparticles exhibiting different type of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and thus facet coverage on its behaviour during the ammonia oxidation cycle.
+Moreover, the average shape of multi-faceted nanoparticles was recently measured at the SixS beamline under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani et al. \parencite*{Seriani2008}.
+The evolution of two single nanoparticles exhibiting different types of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and surface area of the different crystallographic facets on its behaviour during the ammonia oxidation cycle.
 
-The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt (100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
-In-plane reciprocal space maps were first carried out to probe for the existence of surface reconstruction from the adsorbance of reacting molecules, as well as for the growth of potential surface and bulk oxides on the catalyst surface.
-Crystal truncation rods were measured to probe for surface relaxation effects, and to assert the average roughness of the catalyst surface.
+The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt(100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
+In-plane reciprocal space maps were first carried out to search for the existence of surface reconstruction from the adsorption of reacting molecules, as well as to assess the potential growth of surface and bulk oxides on the catalyst surface.
+Crystal truncation rods were measured to probe surface relaxation effects, and to assert the average roughness of the catalyst surface.
 Additional $L$-scans were performed perpendicularly to newly discovered in-plane peaks to investigate the 3D structure of potential surface structures.
 Reflectivity curves were also carried out to obtain complementary information about the formation of new layers on the catalyst surface.
 
 % introduce xps
 Finally, core level photoemission spectroscopy provides different signatures for many moieties adsorbed on the surface during reactions and therefore the possibility to strengthen the links between structure, surface moieties and reaction products.
-In the intent of carrying out complementary NAP-XPS experiments to extend such concept to pure components of the standard catalyst, and to link internal stresses/surface-relaxations obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt (111) and Pt (100) samples are used for both SXRD and NAP-XPS.
-For each combination of temperature and ammonia to oxygen ratio, the O1s, N1s, and Pt4f core levels were measured, that should carry information of the surface state, to establish a connection between selectivity, surface moieties, and internal stress.
+In the intent of carrying out complementary NAP-XPS experiments to extend such concept to pure components of the standard catalyst, and to link internal stresses/surface-relaxations obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt(111) and Pt(100) single crystals are used for both SXRD and NAP-XPS.
+For each combination of temperature and ammonia to oxygen ratio, the O 1s, N 1s, and Pt 4f core levels were measured, that should carry information of the surface state, to establish a connection between selectivity, surface moieties, and internal stress.
 The Fermi edge is also measured after each core level to be able to find the zero binding energy.
 
 The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature after the catalyst light-off.
 Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment and the long time required to perform all the measurements.
 To make certain that any surface relaxation effects are related to the presence of both ammonia and oxygen in the reactor, the sample was first exposed to high oxygen atmosphere, at which the potential growth of surface oxides on the catalyst surface was monitored.
-The following introduction of ammonia in the reactor enables us to probe the impact of potential existent surface oxides on the catalyst selectivity during the reaction, as well as their stability during reaction condition.
+The following introduction of ammonia in the reactor enables us to probe the impact of existing surface oxides on the catalyst selectivity during the reaction, as well as their stability during reaction condition.
 Two different partial pressures of oxygen have been used with the same partial pressure of ammonia to probe the effect of the ammonia to oxygen ratio on the catalyst structure, surface species, and selectivity.
 Finally, only ammonia was kept in the reactor to be able to de-correlate the effect of the presence of ammonia from the simultaneous presence of ammonia and oxygen.
 
 The sample was characterised under argon before and after the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
 Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in-situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
-The total atmosphere is not anymore kept constant to \qty{500}{\milli\bar} by the use of Argon as an inert carrier gas between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\ce{O_2} / \ce{NH_3}) ratio.
+The total atmosphere is not anymore kept constant by the use of Argon between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\ce{O_2} / \ce{NH_3}) ratio.
 The different conditions are resumed in tab. \ref{tab:ConditionsSXRD} and \ref{tab:ConditionsXPS}.
 
 The use of a residual gas analyser during \textit{in-situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
@@ -59,7 +60,7 @@ The use of a residual gas analyser during \textit{in-situ} and \textit{operando}
     \bottomrule
     \end{tabular}%
 }
-\caption{Different atmospheres used to probe the ammonia oxidation on Pt (100) and Pt (111) single crystals with SXRD.}
+\caption{Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with SXRD.}
 \label{tab:ConditionsSXRD}
 \end{table}
 
@@ -84,13 +85,13 @@ The use of a residual gas analyser during \textit{in-situ} and \textit{operando}
     \bottomrule
     \end{tabular}%
 }
-\caption{Different atmospheres used to probe the ammonia oxidation on Pt (100) and Pt (111) single crystals with NAP-XPS.}
+\caption{Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with NAP-XPS.}
 \label{tab:ConditionsXPS}
 \end{table}
 
 \subsection{Experimental setup for SXRD experiments in the horizontal geometry}\label{sec:SXRDSetupH}
 
-The surface x-ray diffraction experiment were performed at the SixS beamline at the Synchrotron SOLEIL detailed in sec. \ref{sec:SIXS}.
+The surface x-ray diffraction experiment was performed at the SixS beamline at the Synchrotron SOLEIL detailed in sec. \ref{sec:SIXS}.
 The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of Argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
 Two successive sputtering and annealing cycles have been carried out before the start of the SXRD experiment.
 To do so, the reactor cell was brought to low pressure by respectively closing and opening the entrance and exit valves, while pumping the reactor volume.
@@ -98,15 +99,16 @@ The volume inside the XCAT reactor was increased by \textit{opening} the chamber
 The sputtering current resulting from the impact of ions on the sample surface was measured by a circuit directly connected to the sample.
 The sample height was tuned to maximise the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{5}{\minute} at room temperature.
 The efficiency of the sputtering could be observed directly by a quick increase of the reactor pressure in the first minutes linked to the removal of surface impurities, followed by a progressive decrease of the reactor pressure from pumping.
-The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{30}{\minute} for annealing, the efficiency of which could again be directly visualised by the increase of the reactor pressure.
-The same procedure was applied to both Pt (111) and Pt (100) surfaces.
+The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{30}{\minute} for annealing, the removal of impurities could be directly visualised by the increase of the reactor pressure.
+The same procedure was applied to both Pt(111) and Pt(100) surfaces.
 
 The experiment was performed at an energy of \qty{18.44}{\keV}.
 The alignment of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
 In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
 The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}), allowing us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
 Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximise the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
-The sample plane was realigned at the beginning of each condition in the direct beam to make that the beam is always on the sample surface, the orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
+The sample plane was realigned at the beginning of each condition to ensure that the beam consistently impinges on the sample surface.
+The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
 
 \begin{figure}[!htb]
     \centering
@@ -114,7 +116,7 @@ The sample plane was realigned at the beginning of each condition in the direct 
     \includegraphics[width=0.33\textwidth]{/home/david/Documents/PhD/Figures/xps_data/B07Setup.png}
     \caption{
         Round single crystal set on sample holder (left) the top of the crystal is [111] oriented, the surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the [100] oriented sample has the same shape.
-        Large XCAT reactor opened for sputtering for (middle).
+        Large XCAT reactor opened for sputtering (middle).
         Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from Held et al. \parencite*{Held2020}.
         \textcolor{Important}{Add image of XCAT opened and closed}
     }
@@ -130,6 +132,6 @@ Four different pumping stages protect the vacuum in the UHV section of the analy
 The ﬁrst two differential pumping stages each contain a quadrupole mass spectrometer used for the analysis of the sample environment, depending on the total pressure in the reactor cell.
 The increased attenuation through high pressures is compensated by limiting the path length to sub-millimetre range for electrons that travel through the atmosphere from the sample surface to the analyser, the typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
 
-The energy or the incident photons was chosen to optimised the photoelectron signal, as a compromise between electron transmission (which increases as a function of the photon energy) and excitation cross-sections (which decreases as a function of the photon energy), depending on the gas present in the reactor.
+The energy or the incident photons was chosen to optimised the photoelectron signal, as a compromise between electron transmission and excitation cross-sections, which respectively increases and decreases as a function of the photon energy.
 Guidelines on how to choose the best instrumental settings are detailed in \parencite{Held2020}.
-The combined energy resolution of the beamline and analyser, while working in NAP conditions, ranged between 0.8 and 1.2 eV for a kinetic energy of 800 eV, pass energy of 20 eV, and photon energies from 870 to 1300 eV.
+The combined energy resolution of the beamline and analyser, while working in NAP conditions, ranged between \qty{0.8}{\eV} and \qty{1.2}{\eV}.
