--- a/Sections/99_4eme_couverture.tex
+++ b/Sections/99_4eme_couverture.tex
@@ -29,19 +29,43 @@
 
 \vspace{-.5cm}
 \begin{multicols}{2}
-\noindent \textbf{Résumé:} Le principal objectif est d'imager des nanostructures pour sonder les conditions in situ et operando ; mesurer la structure à l'échelle nanométrique et révéler également les effets de masse, de surface et d'interface ainsi que les défauts. Viser à terme à comprendre les phénomènes structurels importants pour les nanocatalyseurs et les relier à leur activité, sélectivité, réutilisabilité et durabilité. En complément des études cohérentes aux rayons X sur des particules individuelles, des techniques étudiants la moyenne des ensembles comme la diffraction des rayons X à incidence rasante seront employées pour voir si l'évolution des formes d'ensemble sont similaires à celles des nanoparticules uniques et sondent s'il y a une déconnexion entre les particules uniques et l'activité catalytique sur des billions de particules. La catalyse des nanomatériaux est apparue comme un moyen efficace d'exposer une surface plus élevée et d'accélérer les processus catalytiques en maximisant le rapport surface-volume. Le développement d'une catalyse hétérogène avec une sélectivité ciblant les 100\% est un défi constant ainsi que la compréhension de la durabilité et du vieillissement du catalyseur lui-même. Dans un procédé réel (réacteur d'usine de catalyseur, échappement de voiture, pile à combustible), l'évolution de la forme et de la déformation des nanoparticules catalytiques dans des conditions de réaction contribue au vieillissement du catalyseur et a un impact sur la durée de vie du dispositif. Cependant, le processus catalytique et les changements structurels associés restent encore mal compris. Comprendre comment la structure du catalyseur est affectée par la couche adsorbée dans des conditions de réaction est donc de la plus haute importance pour formuler des relations de performance de structure de catalyseur qui guident la conception de meilleurs catalyseurs.
+\noindent \textbf{Résumé:}
+Le principal objectif de ce travail est d'étudier des catalyseurs hétérogènes \textit{in situ} et \textit{operando} pendant l'oxydation de l'ammoniac en se rapprochant des valeurs de température et pression industrielles.
+Actuellement, ce processus catalytique et les changements structurels associés sont mal compris, et nous proposons d'utiliser différents échantillons en platine, nanoparticules et monocristaux afin de réduire l'écart entre les études scientifiques sur échantillons modèles et les catalyseurs utilisés en agro-industrie.
+L'activité catalytique des différents échantillons est mesurée pour lier structure et sélectivité durant la réaction, qui peut être focalisée vers la production d'azote (\ce{N_2}) ou d'oxyde nitrique (\ce{NO}).
+La production de protoxyde d'azote (\ce{N_2O}) doit être évitée de part son importante contribution à l'effet de serre.
+Le développement d'une catalyse hétérogène avec une sélectivité ciblant les \qty{100}{\percent} est un défi constant, ainsi que la compréhension de la durabilité, du vieillissement et de la désactivation du catalyseur lui-même.
+Mesurer la structure de nanoparticules à l'échelle nanométrique permet de révéler les effets de volume, de tension et de compression de surface et d'interface, ainsi que l'existence de différents types de défauts.
+En complément des études d'imagerie par diffraction cohérente de rayons X en condition de Bragg sur des nanoparticules individuelles, l'étude d'un ensemble de nanoparticules sera effectuée \textit{via} la diffraction des rayons X à incidence rasante.
+La diffraction cohérente de rayons X en condition de Bragg étant une nouvelle technique, une organisation typique de la réduction et analyse des données est proposée.
+De plus, chaque type de surface présente sur les nanoparticules (e.g. (111), (100)) est ensuite étudiée à l'aide de monocristaux par diffraction des rayons X en surface et spectroscopie photoélectronique par rayons X.
+De ce fait, la structure de surface ainsi que la présence d'espèces adsorbées peut être reliée à l'activité catalytique mesurée, permettant une meilleure compréhension du mécanisme de réaction.
+Finalement, l'évolution de la structure d'ensemble et de monocristaux est comparée à celle des nanoparticules uniques pour confirmer/infirmer le lien entre structure moyenne et structure individuelle.
+
 \end{multicols}
 
 \end{mdframed}
 
 \begin{mdframed}[linecolor=Prune,linewidth=1]
 
-\textbf{Title:}Catalytic properties at the nanoscale probed by surface X-ray diffraction and coherent diffraction imaging
+\textbf{Title:} Catalytic properties at the nanoscale probed by surface X-ray diffraction and coherent diffraction imaging
 
 \noindent \textbf{Keywords:} Diffraction, Catalysis, Surface, Structure, Strain
 
 \begin{multicols}{2}
-\noindent \textbf{Abstract:} The main objective is to image nanostructures to probe in situ and operando conditions; measure the structure at nanoscale and to reveal bulk, surface and interface effects, as well as defects. Ultimately aiming to understand the structural phenomena important for the working nanocatalysts and link them to their activity, selectivity, reusability and sustainability. In complement to coherent x-ray studies on individual particles, ensemble-averaging techniques like grazing incidence x-ray diffraction will be employed to see if the evolution of ensemble shapes is similar to the one of single nanoparticles and probe if there is a disconnect between single particles and the catalytic activity over trillions of particles. Catalysis of nanomaterials has emerged as an efficient way to expose higher surface area and accelerate catalytic processes by maximizing the surface-volume ratio. The development of heterogeneous catalysis with selectivity targeting the 100\% is a constant challenge as well as understanding the durability and ageing of the catalyst itself. In a real process (catalyst plant reactor, car exhaust, fuel cell) the shape and strain evolution of catalytic nanoparticles under reaction conditions contributes to the ageing of the catalyst and impact the lifetime of the device. However, the catalytic process and the associated structural changes remain poorly understood. Understanding how catalyst structure is affected by the adsorbed layer under reaction conditions is therefore of utmost importance to formulate catalyst structure performance relations that guide the design of better catalysts.
+\noindent \textbf{Abstract:}
+The main objective of this work is to study heterogeneous catalysts \textit{in situ} and \textit{operando} during the oxidation of ammonia by approaching industrial temperature and pressure values.
+Currently, this catalytic process and the associated structural changes are poorly understood.
+We propose to use different samples in platinum, nanoparticles and single crystals in order to reduce the gap between scientific studies on model samples and catalysts used in the fertiliser industry.
+The catalytic activity of the different samples is measured to link structure and selectivity during the reaction, which can be focused towards the production of nitrogen (\ce{N_2}) or nitric oxide (\ce{NO}).
+The production of nitrous oxide (\ce{N_2O}) must be avoided due to its significant contribution to the greenhouse effect.
+Developing heterogeneous catalysis with selectivity targeting \qty{100}{\percent} is an ongoing challenge, as is understanding the durability, ageing, and deactivation of the catalyst itself.
+Measuring the structure of nanoparticles at the nanoscale makes it possible to reveal the effects of volume, surface and interface tension and compression, as well as the existence of different types of defects.
+In addition to imaging studies by Bragg coherent X-ray diffraction imaging on individual nanoparticles, the study of a set of nanoparticles will be carried out \textit{via} grazing incidence X-ray diffraction.
+Bragg coherent X-ray diffraction imaging being a new technique, a typical workflow for data reduction and analysis is proposed.
+In addition, each type of surface present on the nanoparticles (e.g. (111), (100)) is then studied using single crystals by surface X-ray diffraction and X-ray photoelectron spectroscopy.
+Therefore, the surface structure as well as the presence of adsorbed species can be linked to the measured catalytic activity, allowing a better understanding of the reaction mechanism.
+Finally, the evolution of the nanoparticle ensemble structure and of single crystals is compared to that of single nanoparticles to confirm/refute the link between average structure and individual structure.
 \end{multicols}
 \end{mdframed}
 
