--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,60 @@ volume = {90},
 year = {2002}
 }
 
+@article{Bennett1961,
+author = {H. E. Bennett and J. O. Porteus},
+journal = {J. Opt. Soc. Am.},
+keywords = {Diffuse reflectance; Integrating spheres; Roughness; Surface measurements; Surface roughness measurement; Transmittance},
+number = {2},
+pages = {123--129},
+publisher = {Optica Publishing Group},
+title = {Relation Between Surface Roughness and Specular Reflectance at Normal Incidence},
+volume = {51},
+month = {Feb},
+year = {1961},
+doi = {10.1364/JOSA.51.000123},
+abstract = {Expressions relating the roughness of a plane surface to its specular reflectance at normal incidence are presented and are verified experimentally. The expressions are valid for the case when the root mean square surface roughness is small compared to the wavelength of light. If light of a sufficiently long wavelength is used, the decrease in measured specular reflectance due to surface roughness is a function only of the root mean square height of the surface irregularities. Long-wavelength specular reflectance measurements thus provide a simple and sensitive method for accurate measurement of surface finish. This method is particularly useful for surface finishes too fine to be measured accurately by conventional tracing instruments. Surface roughness must also be considered in precise optical measurements. For example, a non-negligible systematic error in specular reflectance measurements will be made even if the root mean square surface roughness is less than 0.01 wavelength. The roughness of even optically polished surfaces may thus be important for measurements in the visible and ultraviolet regions of the spectrum.},
+}
+
+@article{Waseda1975,
+  title={High-temperature thermal expansion of platinum, tantalum, molybdenum, and tungsten measured by X-ray diffraction},
+  author={Waseda, Y and Hirata, K and Ohtani, M},
+  journal={High Temperatures-High Pressures},
+  volume={7},
+  number={2},
+  pages={221--226},
+  year={1975}
+}
+
+@article{Davey1925,
+  title = {Precision Measurements of the Lattice Constants of Twelve Common Metals},
+  author = {Davey, Wheeler P.},
+  journal = {Phys. Rev.},
+  volume = {25},
+  issue = {6},
+  pages = {753--761},
+  numpages = {0},
+  year = {1925},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.25.753},
+}
+
+@Article{Gunther2008,
+author={G{\"u}nther, S. and Scheibe, A. and Bluhm, H. and Haevecker, M. and Kleimenov, E. and Knop-Gericke, A. and Schl{\"o}gl, R. and Imbihl, R.},
+title={In Situ X-ray Photoelectron Spectroscopy of Catalytic Ammonia Oxidation over a Pt(533) Surface},
+journal={The Journal of Physical Chemistry C},
+year={2008},
+month={10},
+day={02},
+publisher={American Chemical Society},
+volume={112},
+number={39},
+pages={15382-15393},
+issn={1932-7447},
+doi={10.1021/jp803264v},
+}
+
 @article{Wulff1901,
 title = {XXV. Zur Frage der Geschwindigkeit des Wachsthums und der Auflösung der Krystallflächen},
 author = {G. Wulff},
@@ -184,7 +238,7 @@ author={Kiss, J. and Lennon, D. and Jo, S. K. and White, J. M.},
 title={Photoinduced dissociation and desorption of nitrous oxide on a platinum(111) surface},
 journal={The Journal of Physical Chemistry},
 year={1991},
-month={Oct},
+month={10},
 day={01},
 publisher={American Chemical Society},
 volume={95},
@@ -666,7 +720,7 @@ doi = {10.1021/acscatal.8b04251},
 issn = {21555435},
 journal = {ACS Catalysis},
 keywords = {active site,ammonia activation,density functional theory,kinetic and thermodynamic control,microkinetic modeling,platinum,structure sensitivity,temperature-dependent catalysis},
-month = {mar},
+month = {03},
 number = {3},
 pages = {2407--2414},
 publisher = {American Chemical Society},
@@ -701,6 +755,19 @@ doi = {https://doi.org/10.1002/9783527610044.hetcat0130},
 year = {2008},
 keywords = {ammonia oxidation, reaction mechanism, platinum, rhodium, palladium, gauzes, reaction engineering},
 abstract = {Abstract The sections in this article are}
+}
+
+@article{Henke1993,
+title = {X-Ray Interactions: Photoabsorption, Scattering, Transmission, and Reflection at E = 50-30,000 eV, Z = 1-92},
+journal = {Atomic Data and Nuclear Data Tables},
+volume = {54},
+number = {2},
+pages = {181-342},
+year = {1993},
+issn = {0092-640X},
+doi = {https://doi.org/10.1006/adnd.1993.1013},
+author = {B.L. Henke and E.M. Gullikson and J.C. Davis},
+abstract = {The primary interactions of low-energy x-rays within condensed matter, viz. photoabsorption and coherent scattering, have been described for photon energies outside the absorption threshold regions by using atomic scattering factors. The atomic scattering factors may be accurately determined from the atomic photoabsorption cross sections using modified Kramers-Kronig dispersion relations. From a synthesis of the currently available experimental data and recent theoretical calculations for photoabsorption, the angle-independent, forward-scattering components of the atomic scattering factors have been thus semiempirically determined and tabulated here for 92 elements and for the region 50-30,000 eV. Atomic scattering factors for all angles of coherent scattering and at the higher photon energies are obtained from these tabulated forward-scattering values by adding a simple angle-dependent form-factor correction. The incoherent scattering contributions that become significant for the light elements at the higher photon energies are similarly determined. The basic x-ray interaction relations that are used in applied x-ray physics are presented here in terms of the atomic scattering factors. The bulk optical constants are also related to the atomic scattering factors. These atomic and optical relations are applied to the detailed calculation of the reflectivity characteristics of a series of practical x-ray mirror, multilayer, and crystal monochromators. Comparisons of the results of this semiempirical, "atomic-like" description of x-ray interactions for the low-energy region with those of experiment and ab initio theory are presented.}
 }
 
 @article{Svintsitskiy2020,
@@ -753,6 +820,20 @@ doi = {https://doi.org/10.1016/j.cej.2007.05.005},
 author = {Ralph Kraehnert and Manfred Baerns},
 keywords = {Catalytic ammonia oxidation, Platinum catalyst, Kinetics, Micro-structured reactor},
 abstract = {The kinetics of Pt-catalyzed ammonia oxidation on polycrystalline Pt were investigated at partial pressures of ammonia and oxygen up to 6kPa and temperatures between 286 and 385°C, applying a micro-structured reactor that ascertained temperature control of the exothermic reaction. Using literature-based mechanistic models, a micro-kinetic model was derived based on parameter optimization and a model discrimination procedure. The model described the rates of formation of all nitrogen-containing products, i.e. N2, N2O and NO. Catalyst characterization of platinum samples by electron microscopy indicated that reaction-induced restructuring of the Pt surface limited the accuracy of derived kinetic parameters already at the low temperature applied in this work. Despite of necessary simplifications, the best-fitting kinetic model predicted reasonable product selectivities for the reaction conditions of an industrial ammonia burner.}
+}
+
+@article{Weststrate2006,
+title = {Ammonia oxidation on Pt(410)},
+journal = {Journal of Catalysis},
+volume = {242},
+number = {1},
+pages = {184-194},
+year = {2006},
+issn = {0021-9517},
+doi = {https://doi.org/10.1016/j.jcat.2006.06.011},
+author = {C.J. Weststrate and J.W. Bakker and E.D.L. Rienks and C.P. Vinod and A.V. Matveev and V.V. Gorodetskii and B.E. Nieuwenhuys},
+keywords = {O adsorption, NH, Pt(410), Ammonia oxidation, NO formation, X-ray photoelectron spectroscopy, Synchrotron radiation, Temperature-programmed desorption},
+abstract = {The adsorption of both O2 and NH3 on Pt(410) was studied using temperature-programmed desorption (TPD) and X-ray photoelectron spectroscopy (XPS). Molecular NH3 desorbed from Pt(410) between 100 and 450 K, and dissociation was not observed. Radiation (X-rays, electrons) induced NH3ad dissociation, and as a result several dissociation products (NH2ad, NHad, and Nad) were observed in the N 1s core-level spectrum. NHad is a rather stable dissociation product that starts to dehydrogenate above 350 K. The Nad and Had formed in this process desorbed on formation (as N2 and H2). Both molecular and dissociative O2 adsorption were observed after the surface was exposed to O2(g) at 100 K. Molecularly adsorbed O2 desorbed below 200 K, whereas atomic oxygen desorbed (as O2) between 600 and 900 K, in two distinct desorption peaks. In the O 1s core-level spectrum, both molecular O2 and two different types of Oad were distinguished. NH3ad dissociation was observed on an oxygen-presaturated surface. The NH3ad oxy-dehydrogenation started at 150 K. NOad and NO(g) were also observed, but only during experiments in which an excess of Oad was available. NOad desorbed/decomposed between 400 and 500 K. For the steady-state ammonia oxidation reaction, N2 and H2O were the major products at low temperatures, whereas the selectivity toward NO and H2O changed at higher temperatures. This selectivity change can be attributed to changes in surface composition.}
 }
 
 @article{Imbihl2007,
@@ -965,6 +1046,21 @@ NUMBER = {9},
 ISSN = {2073-4344},
 ABSTRACT = {High-temperature oxidation of NH3 on Pt alloy gauzes to NO is widely employed in industry for the production of HNO3, which is used to obtain agricultural fertilizers. Particular attention is paid now to the investigation of the chemical composition of gauzes used in NH3 oxidation. X-ray photoelectron and energy-dispersive X-ray spectroscopies with the depth of analysis ca. 5 nm and ca. 500 nm were applied to investigate the chemical composition of surface and subsurface layers of the new and used in NH3 oxidation with air at T = 1133 K Pt&ndash;Pd&ndash;Rh&ndash;Ru catalytic gauzes (81, 15, 3.5, 0.5 wt.%, respectively). For all the gauzes, adsorption (OHad, COad), graphitic (Cgr) and oxide (Rh2O3) films were found on the surface of the metallic alloy. Under these films, Cab, Nab and Oab atoms absorbed in the subsurface layers were detected on the gauzes used in NH3 oxidation. The obtained data testify to the penetration of Oab and Nab atoms into deeper layers of the alloy during etching with elevation of the catalyst temperature. Oab atoms were accumulated predominantly on dislocations, etch pits and grain boundaries, whereas Nab atoms intercalated mostly into interstitial sites of the alloy lattice.},
 DOI = {10.3390/catal12090930}
+}
+
+@Inbook{Starr2021,
+author={Starr, David E.},
+title={A Brief Overview of the Principles of Ambient Pressure X-ray Spectroscopies},
+series={ACS Symposium Series},
+year={2021},
+month={Nov},
+day={11},
+publisher={American Chemical Society},
+volume={1396},
+pages={1-17},
+note={0},
+isbn={9780841298125},
+doi={10.1021/bk-2021-1396.ch001},
 }
 
 @article{NovellLeruth2008,
@@ -2801,16 +2897,6 @@ author = {M. Kiskinova and G. Pirug and H.P. Bonzel},
 abstract = {The interaction of NO with a Pt(111) surface was studied by means of XPS, LEED and AES at 120 K and 305 K. The observed changes in the valence and O(1s) and N(1s) core level spectra during NO adsorption and stepwise heating of the adsorbed layer as well as the estimated O : N atomic ratios supported molecular NO adsorption on Pt(111). The NO saturation coverage was found to increase from 0.23 at 305 K to 0.54 at 120 K. At both adsorption temperatures and at coverages less than 0.15 only a single adsorption state was populated characterized by an O(1s) binding energy of 530.6 eV and a dipole moment of 0.42 D, negative end outwards. At higher coverages, a second state characterized by an O(1s) binding energy of 532.5 eV appeared. These two states are associated with bridge and linearly bonded NO, respectively, in accordance with existing vibrational data. For high NO coverages achieved after adsorption at 120 K the XPS O(1s) spectra produce evidence of an adsorbed NO species characterized by an O(1s) binding energy of ~ 531.1 eV. This species may correspond to disordered NO molecules unobservable by infra-red spectroscopy.}
 }
 
-@article{Scheibe2008,
-author = {Scheibe, A and Bluhm, H and Haevecker, M and Kleimenov, E and Schlo, R and Imbihl, R},
-journal = {Journal of Physical Chemistry C},
-number = {39},
-pages = {15382--15393},
-title = {{In Situ X-ray Photoelectron Spectroscopy of Catalytic Ammonia Oxidation over a Pt (533) Surface}},
-volume = {112},
-year = {2008}
-}
-
 @article{Scheibe2005,
 title = {Kinetics of ammonia oxidation on stepped platinum surfaces. I. Experimental results},
 journal = {Surface Science},
@@ -3319,6 +3405,17 @@ title = {{Three-dimensional coherent Bragg imaging of rotating nanoparticles}},
 year = {2020}
 }
 
+@article{Starr2021,
+author = {Starr, David E},
+doi = {10.1021/bk-2021-1396.ch001},
+issn = {9780841298125},
+journal = {Ambient Pressure Spectroscopy in Complex Chemical Environments, Part 1 - A Brief Overview of the Principles of Ambient Pressure X-ray Spectroscopies},
+pages = {1--17},
+publisher = {American Chemical Society},
+title = {{A Brief Overview of the Principles of Ambient Pressure X - ray Spectroscopies}},
+year = {2021}
+}
+
 @phdthesis{Fernandez2017,
 author = {Fernandez, Sara},
 title = {{An insight into nanostructures through coherent diffraction imaging}},
@@ -3626,7 +3723,7 @@ year = {2021}
 
 @article{Miller2014,
    abstract = {We have used X-ray photoelectron spectroscopy and polarization-resolved O K-edge X-ray absorption spectroscopy to investigate the reactivity of various oxygen covered Pt(111) surfaces, which emerge under high temperature and pressure conditions, toward CO. We find that the reactivity of the O/Pt(111) system decreases monotonically with increasing oxygen coverage. Of the three surface oxygen phases, viz., chemisorbed oxygen (Oad), a PtO-like surface oxide, and α-PtO$_2$ trilayers, Oad exhibits the highest reactivity toward CO, whereas α-PtO$_2$ trilayers exhibit the lowest. Pt(111) surfaces fully terminated by α-PtO$_2$ trilayers are inert to CO. Here it is proposed that the reactive phase is either Oad or PtO-like surface oxide phase on bare non-CO poisoned Pt regions with PtO$_2$ as majority spectator species. © 2014 American Chemical Society.},
-   author = {Daniel Miller and Hernan Sanchez Casalongue and Hendrik Bluhm and Hirohito Ogasawara and Anders Nilsson and Sarp Kaya},
+   author = {Miller, D. and Sanchez Casalongue, H. and Bluhm, H. and Ogasawara, H. and Nilsson, A. and Kaya, S.},
    doi = {10.1021/ja413125q},
    issn = {15205126},
    issue = {17},
@@ -4375,6 +4472,35 @@ doi = {https://doi.org/10.1016/S0021-9517(02)00067-2},
 author = {Gandhi, H.S. and Graham, G.W. and McCabe, R.W.},
 keywords = {Automative exhaust catalyst, TWC, Oxygen storage capacity, Platinum, Palladium, Rhodium, Ceria, Zirconia},
 abstract = {Research in the field of automotive exhaust catalysis has paralleled the broader growth in heterogeneous catalysis research—beginning in the 1960s, progressing through commercialization in the mid-1970s, and continuing today. The general trend has been one of increasingly complex catalyst formulations in response to increasingly stringent emission standards. Nowhere is this more evident than in the various means that have been employed to most effectively utilize the noble metal components. These efforts will continue, but with greater emphasis on optimizing catalyst formulations for lean-burn applications and reducing catalyst cost and complexity without sacrificing performance.}
+}
+
+@article{Hawkins2009,
+  title = {Density functional theory study of the initial oxidation of the Pt(111) surface},
+  author = {Hawkins, Jeffery M. and Weaver, Jason F. and Asthagiri, Aravind},
+  journal = {Phys. Rev. B},
+  volume = {79},
+  issue = {12},
+  pages = {125434},
+  numpages = {13},
+  year = {2009},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.79.125434},
+}
+
+@Article{Wild2000,
+author={Wild, U. and Teschner, D. and Schl{\"o}gl, R. and Pa{\'a}l, Z.},
+title={Surface composition and possible rearrangement of disperse Pt and Rh catalysts: does the presence of carbon and oxygen contribute to different catalytic properties?},
+journal={Catalysis Letters},
+year={2000},
+month={Jul},
+day={01},
+volume={67},
+number={2},
+pages={93-98},
+abstract={The surface composition of Rh and Pt blacks (as determined by XPS) shows carbon and oxygen impurities in the untreated state. Oxygen on Pt is present as adsorbed O as well as OH/H2O groups and oxidized carbon. Rh was partly oxidized to Rh2O3, in agreement with UPS showing hardly any Fermi‐edge intensity in untreated Rh as opposed to untreated Pt. High Fermi‐edge intensities indicated a predominant metallic surface after an in situ treatment with H2 at 483 K, increasing the purity (XPS) to ∼90{\%}. This treatment reduced Rh to metal and removed its C impurity. Pt, in turn, retained much carbon after H2 treatment, present mainly as graphitic carbon. A minor amount of CO was also detected, some of the O 1s peak belonging to it. The two metals were tested in methylcyclopentane reactions. Considering the necessity of carbon for nondegradative reactions and oxygen enhancing fragmentation, a correlation is suggested between the typical impurities of Pt and Rh and their respective catalytic propensities: the high fragmentation activity of Rh and the predominant nondegradative reactions to C6 ``ring opening products'' on Pt.},
+issn={1572-879X},
+doi={10.1023/A:1019061420659},
 }
 
 @article{PerezRamirez2003,
@@ -5922,6 +6048,31 @@ doi={10.1038/ncomms10092},
    pages = {331--369},
 }
 
+@article{Nevot1980,
+	author = {{N\'evot, L.} and {Croce, P.}},
+	title = {Caract\'erisation des surfaces par r\'eflexion rasante de rayons X. Application \`a l'\'etude du polissage de quelques verres silicates},
+	DOI= "10.1051/rphysap:01980001503076100",
+	journal = {Rev. Phys. Appl. (Paris)},
+	year = 1980,
+	volume = 15,
+	number = 3,
+	pages = "761-779",
+}
+
+@article{Parratt1954,
+  title = {Surface Studies of Solids by Total Reflection of X-Rays},
+  author = {Parratt, L. G.},
+  journal = {Phys. Rev.},
+  volume = {95},
+  issue = {2},
+  pages = {359--369},
+  numpages = {0},
+  year = {1954},
+  month = {07},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.95.359},
+}
+
 @article{Bjorck2007,
 author = "Bj{\"{o}}rck, Matts and Andersson, Gabriella",
 title = "{{\it GenX}: an extensible X-ray reflectivity refinement program utilizing differential evolution}",
@@ -6921,7 +7072,7 @@ keywords = {X-ray diffraction, coherence, phase retrieval, Jupyter Notebook, gra
    volume = {3},
    number = {2},
    pages = {285},
-   author = {Doniach S and Sunjic M},
+   author = {Doniach, S and Sunjic, M},
    title = {Many-electron singularity in X-ray photoemission and X-ray line spectra from metals},
    journal = {Journal of Physics C: Solid State Physics},
    abstract = {It is pointed out that the spectra of X-ray induced fast photoelectrons from metal should have a characteristic skew line shape resulting from Kondo-like many-electron interactions of the metallic conduction electrons with the accompanying deep hole in the final state. The same line shape should also occur for the discrete line spectra of X-rays emitted from metals. This mechanism could account for the well-known asymmetries observed for K alpha lines.}
