--- a/Sections/6_Appendix/Pt111.tex
+++ b/Sections/6_Appendix/Pt111.tex
@@ -8,9 +8,21 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures//map_q_2064-2072_patched_hex.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_481-516_patched.pdf}
+    \caption{
+        Reciprocal space maps collected under \qty{420}{\milli\bar} of argon and \qty{80}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}after the introduction of oxygen.
+        The angle between the gray vectors is equal to \ang{42.65}.
+    }
+    \label{fig:481QSpace}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_2064-2072_patched_hex.pdf}
     \caption{
         Reciprocal space maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, from \qty{24}{\hour}\qty{22}{\minute} to \qty{25}{\hour}\qty{43}{\minute} after the introduction of oxygen.
+        The angle between vectors of the same color is \ang{120}.
+        The angle between vectors going from the center to neighbouring peaks at the same magnitude of the scattering vector (e.g. purple and gray peaks) is equal to \ang{12}.
     }
     \label{fig:2064QSpace}
 \end{figure}
@@ -69,7 +81,7 @@
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_1.pdf}
     \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt(111) single crystal at \qty{450}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
         The RGA electron multiplier is off for all the masses.
     }
@@ -80,7 +92,7 @@
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_2.pdf}
     \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt(111) single crystal at \qty{450}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
         The RGA electron multiplier is on for all the masses besides oxygen and argon.
     }
@@ -91,7 +103,7 @@
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_3.pdf}
     \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt(111) single crystal at \qty{450}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
         The RGA electron multiplier is on for all the masses besides argon.
     }
@@ -102,7 +114,7 @@
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/T450_4.pdf}
     \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt (111) single crystal at \qty{450}{\degreeCelsius}.
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the Pt(111) single crystal at \qty{450}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
         The RGA electron multiplier is on for all the masses besides argon.
     }
